adds attention chains

--- a/index.html
+++ b/index.html
@@ -62,17 +62,12 @@
                                     Bermano</a>. Interested in computer graphics, augmented reality, and 3D applications
                                 of deep learning.</p>
                             <p>I was a visitor research in Osaka University, Japan, collaborating with Prof. Daisuke
-                                Iwai, and currently doing an internship in MPI, Germany.</p>
+                                Iwai, and also a research intern in MPI, Germany (Christian Theobalt's group).</p>
                             <p>Here are topics that really excite me:
                                 <br>
-                                special effects (VFX, SFX, CGI), light-matter interaction, physically-based rendering,
+                                light transport theory, special effects (VFX, SFX, CGI), light-matter interaction, physically-based rendering,
                                 projection-mapping, augmented
                                 reality, procedural generation programming, brain-computer interfaces.
-                            </p>
-                            <p>
-                                Here are topics I definitly want and need to study in more depth:
-                                <br>
-                                optimization, multilinear algebra, light transport theory.
                             </p>
                         </div><!--//content-->
                     </div><!--//section-inner-->
@@ -80,7 +75,26 @@
 
                 <section class="latest section">
                     <div class="section-inner">
-                        <h2 class="heading">Publications</h2>
+                        <h2 class="heading">Publications / Preprints</h2>
+                        <h5 class="heading">2025</h5>
+                        <div class="content">
+                            <hr class="divider" />
+                            <div class="item row">
+                                <a class="col-md-4 col-sm-4 col-xs-12"
+                                    href="https://yoterel.github.io/attention_chains/" target="_blank">
+                                    <img class="img-responsive project-image" src="assets/images/ac.gif"
+                                        alt="AttentionChains" />
+                                </a>
+                                <div class="desc col-md-8 col-sm-8 col-xs-12">
+                                    <h3 class="title">Attention (as discrete-time Markov) Chains</h3>
+                                    <p>Preprint, 2025 / Yotam Erel, Olaf Dünkel, Rishabh Dabral, Vladislav Golyanik, Christian Theobalt, Amit H. Bermano</p>
+                                    <a href="https://yoterel.github.io/attention_chains/"> Project Page </a></br>
+                                    <a href="https://arxiv.org/abs/2507.17657"> ArXiv </a></br>
+                                    <a href="https://github.com/yoterel/attention_chains_code"> Code </a>
+                                    <p></p>
+                                </div><!--//desc-->
+                            </div><!--//item-->
+                        </div><!--//content-->
                         <h4 class="heading">2024</h4>
                         <div class="content">
                             <hr class="divider" />
@@ -342,18 +356,14 @@
                     <div class="section-inner">
                         <h2 class="heading sr-only">Basic Information</h2>
                         <div class="content">
-                            <ul class="list-unstyled">
-                                <li><i class="fa fa-map-marker"></i><span class="sr-only">Location:</span>School of
-                                    Computer Science</li>
-                            </ul>
-                            TAU, Tel-Aviv </ul>
-                            </li> </br>
-                            Ramat-Aviv, 39040, Tel-Aviv </ul> </br>
                             <li><i class="fa fa-envelope-o"></i><span class="sr-only">Email:</span><a
                                     href="#">erelyotam@gmail.com</a></li>
-                            </ul> </br>
-                            <li><i class="fa fa-twitter-o"></i><span class="sr-only">Twitter:</span><a
+                            </ul>
+                            <li><i class="fa fa-twitter"></i><span class="sr-only">X:</span><a
                                     href="https://twitter.com/yotam_erel">@yotam_erel</a></li>
+                            </ul>
+                            <li><i class="fa fa-linkedin"></i><span class="sr-only">Linkedin:</span><a
+                                    href="https://www.linkedin.com/in/yotam-erel-2113a4143/">Linkedin</a></li>
                             </ul>
                         </div><!--//content-->
                     </div><!--//section-inner-->
