updated with practilight

--- a/index.html
+++ b/index.html
@@ -81,6 +81,24 @@
                             <hr class="divider" />
                             <div class="item row">
                                 <a class="col-md-4 col-sm-4 col-xs-12"
+                                    href="https://yoterel.github.io/PractiLight-project-page/" target="_blank">
+                                    <img class="img-responsive project-image" src="assets/images/practilight.gif"
+                                        alt="PractiLight" />
+                                </a>
+                                <div class="desc col-md-8 col-sm-8 col-xs-12">
+                                    <h3 class="title">PractiLight: Practical Light Control Using Foundational Diffusion Models</h3>
+                                    <p>Preprint, 2025 / Yotam Erel, Rishabh Dabral, Vladislav Golyanik, Amit H. Bermano, Christian Theobalt</p>
+                                    <a href="https://yoterel.github.io/PractiLight-project-page/"> Project Page </a></br>
+                                    <a href=""> ArXiv (Coming Soon)</a></br>
+                                    <a href="https://github.com/yoterel/PractiLight"> Code </a>
+                                    <p></p>
+                                </div><!--//desc-->
+                            </div><!--//item-->
+                        </div><!--//content-->
+                        <div class="content">
+                            <hr class="divider" />
+                            <div class="item row">
+                                <a class="col-md-4 col-sm-4 col-xs-12"
                                     href="https://yoterel.github.io/attention_chains/" target="_blank">
                                     <img class="img-responsive project-image" src="assets/images/ac.gif"
                                         alt="AttentionChains" />
