--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                                 </a>
                                 <div class="desc col-md-8 col-sm-8 col-xs-12">
                                     <h3 class="title">PractiLight: Practical Light Control Using Foundational Diffusion Models</h3>
-                                    <p>Preprint, 2025 / Yotam Erel, Rishabh Dabral, Vladislav Golyanik, Amit H. Bermano, Christian Theobalt</p>
+                                    <p>SIGGRAPH Asia, 2025 / Yotam Erel, Rishabh Dabral, Vladislav Golyanik, Amit H. Bermano, Christian Theobalt</p>
                                     <a href="https://yoterel.github.io/PractiLight-project-page/"> Project Page </a></br>
                                     <a href="https://arxiv.org/abs/2509.01837"> ArXiv</a></br>
                                     <a href="https://github.com/yoterel/PractiLight"> Code </a>
@@ -105,7 +105,7 @@
                                 </a>
                                 <div class="desc col-md-8 col-sm-8 col-xs-12">
                                     <h3 class="title">Attention (as discrete-time Markov) Chains</h3>
-                                    <p>Preprint, 2025 / Yotam Erel*, Olaf Dünkel*, Rishabh Dabral, Vladislav Golyanik, Christian Theobalt, Amit H. Bermano</p>
+                                    <p>Neurips, 2025 / Yotam Erel*, Olaf Dünkel*, Rishabh Dabral, Vladislav Golyanik, Christian Theobalt, Amit H. Bermano</p>
                                     <p>*denotes equal contribution</p>
                                     <a href="https://yoterel.github.io/attention_chains/"> Project Page </a></br>
                                     <a href="https://arxiv.org/abs/2507.17657"> ArXiv </a></br>
